Try to make single file test more robust
  http://www.cpantesters.org/cpan/report/83e63008-167a-11e4-b344-340470114c4e
  Output from '/usr/bin/make test':

  PERL_DL_NONLAZY=1 /srv/smoker/perl5/perlbrew/perls/perl-5.20.0/bin/perl "-MExtUtils::Command::MM" "-MTest::Harness" "-e" "undef *Test::Harness::Switches; test_harness(0, 'blib/lib', 'blib/arch')" t/*.t
  t/00-basic.t .. ok

  Can't open /tmp/single-6a59078fbb7924670adaecd2dd086604: No such file or directory at t/single.t line 21.

  t/single.t ....
  Dubious, test returned 5 (wstat 1280, 0x500)
  Failed 5/7 subtests

  Test Summary Report
  -------------------
  t/single.t  (Wstat: 1280 Tests: 7 Failed: 5)
    Failed tests:  1, 3-6
    Non-zero exit status: 5
  Files=2, Tests=10,  7 wallclock secs ( 0.49 usr  0.04 sys +  2.90 cusr  0.21 csys =  3.64 CPU)
  Result: FAIL
  Failed 1/2 test programs. 5/10 subtests failed.
  Makefile:863: recipe for target 'test_dynamic' failed
  make: *** [test_dynamic] Error 5

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changelog for App::single
 
+0.02
+       * Try to make single file test more robust
+
 0.01     Sun Jul 27 11:06:48 2014
        * Add script/single
 
