--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Changelog for App::single
 
-0.02
+0.02     Thu Jul 31 12:26:57 2014
        * Try to make single file test more robust
 
 0.01     Sun Jul 27 11:06:48 2014
