--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Changelog for App::single
 
-0.03
+0.03     Fri Aug  1 09:11:15 2014
        * Trying again to make single.t more robust
 
 0.02     Thu Jul 31 12:26:57 2014
