--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Changelog for App::single
 
-0.0401
+0.0401   Sat Aug 23 17:12:40 2014
        * Will try to run the test-suite on any *nix like OS, #2
 
 0.04     Sat Aug 23 17:09:10 2014
